fix with prettier

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,17 @@
 {
-  "compilerOptions": {
-    "target": "es2016",
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "baseUrl": "src",
-    "outDir": "build",
-    "paths": {
-      "@/*": [
-        "*"
-      ]
+    "compilerOptions": {
+        "target": "es2016",
+        "module": "commonjs",
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "strict": true,
+        "skipLibCheck": true,
+        "baseUrl": "src",
+        "outDir": "dist",
+        "paths": {
+            "@/*": ["*"]
+        }
     },
-  },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+    "include": ["src"],
+    "exclude": ["node_modules", "tvapp"]
 }
