--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "main": "dist/app.js",
     "scripts": {
-        "start": "node dist/app.js",
+        "start": "npm run build && node dist/app.js",
         "dev": "nodemon src/app.ts",
         "build": "npx tsc",
         "prettier:format": "npx prettier --write .",
