--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
     "version": "1.0.0",
     "main": "dist/app.js",
     "scripts": {
-        "start": "npm run build && node dist/app.js",
-        "dev": "nodemon src/app.ts",
+        "start": "cross-env NODE_ENV=production node dist/app.js",
+        "dev": "cross-env NODE_ENV=development nodemon --watch src src/app.ts",
         "build": "npx tsc",
         "prettier:format": "npx prettier --write .",
         "prettier:check": "npx prettier --check ."
     },
-    "keywords": [],
+    "keywords": [
+        "home-theater",
+        "movie",
+        "cinema"
+    ],
     "author": "klm",
     "license": "UNLICENSED",
     "description": "",
@@ -17,6 +21,7 @@
         "axios": "^1.7.7",
         "body-parser": "^1.20.3",
         "cors": "^2.8.5",
+        "cross-env": "^7.0.3",
         "dotenv": "^16.4.5",
         "express": "^4.21.0",
         "express-validator": "^7.2.0",
