--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "express-validator": "^7.2.0",
         "module-alias": "^2.2.3",
         "mongoose": "^8.7.0",
+        "morgan": "^1.10.0",
         "random-useragent": "^0.5.0"
     },
     "devDependencies": {
@@ -36,6 +37,7 @@
         "@types/express": "^5.0.0",
         "@types/module-alias": "^2.0.4",
         "@types/mongoose": "^5.11.97",
+        "@types/morgan": "^1.9.9",
         "@types/random-useragent": "^0.3.3",
         "@typescript-eslint/eslint-plugin": "^8.8.0",
         "@typescript-eslint/parser": "^8.8.0",
